cluster/rook-ceph/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rook-ceph-dashboard
  namespace: default
  labels:
    app.kubernetes.io/name: rook-ceph
spec:
  entryPoints:
    - http
  routes:
    - kind: Rule
      match: Host(`rook.thomitzek.net`)
      middlewares:
        - name: local-only@file
      services:
        - name: rook-ceph-mgr-dashboard
          port: 8443
          namespace: rook-ceph
#  tls:
#    secretName: "${SECRET_CERT_NAME_0}-prod-tls"
